--- a/style.css
+++ b/style.css
@@ -1,19 +1,55 @@
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+
+*::-webkit-scrollbar {
+
+    display: none;
+
+}
+
 body {
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
-.top-container {
-    background-color: #f1f1f1;
-    padding: 30px;
-    text-align: center;
-}
+
 
 .header {
-    padding: 10px 16px;
-    background: #555;
-    color: #f1f1f1;
+    background: rgb(0, 0, 0);
+    padding: 0px 20px;
 }
+
+.flex-nav {
+    display: flex;
+    color: #ffffff;
+    height: 9vh;
+    gap: 30px;
+     padding: 20px;
+     width: 100%;
+     margin: auto;
+}
+
+.flex-nav>img {
+    margin: 10px;
+    margin-left: 20px;
+    cursor: pointer;
+}
+
+img {
+    cursor: pointer;
+}
+
+#i-am-sup {
+    background-color: yellow;
+    color: black;
+    padding: 5px;
+    border-radius: 50%;
+    font-weight: bold;
+    position: relative;
+    
+}
+
 
 .content {
     padding: 16px;
@@ -31,9 +67,195 @@ body {
 
 #top-header-nav-op {
     background-color: black;
-    border-bottom: 1rem solid white;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.507);
+    line-height: 1px;
+    display: flex;
+    height: 5vh;
+    overflow: hidden;
+
 }
 
 #top-header-nav-op>img {
     margin: 0vh 15vh;
+}
+
+#top-header-nav-op>div {
+    display: flex;
+    margin: 10px;
+    gap: 20px;
+    justify-self: center;
+}
+
+#top-header-nav-op>div>a {
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 1.5vh;
+    border-right: 1px solid white;
+    justify-self: center;
+    padding: 5px;
+    transition: 1s;
+}
+
+#top-header-nav-op>div>a:hover {
+    color: black;
+    background-color: white;
+}
+
+
+/* Drop down css # 1 in navbar */
+.dropbtn-nav {
+    background-color: rgba(255, 255, 255, 0.199);
+    color: white;
+    border: none;
+    padding: 10px;
+    width: 70vh;
+    border-radius: 5px;
+    margin: 10px;
+    font-size: 2.5vh;
+    cursor: pointer;
+    transition: 1s ease-in-out;
+}
+
+.dropdown-nav {
+    position: relative;
+    display: inline-block;
+    transition: 1s ease-in-out;
+}
+
+.dropdown-content-nav {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    width: 75vh;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: -60px;
+}
+
+.dropdown-content-nav>h1 {
+    color: black;
+    border-bottom: 1px solid grey;
+    font-size: 3vh;
+    padding: 5px;
+}
+
+.dropdown-content-nav a {
+    color: black;
+    text-decoration: none;
+    display: block;
+    border: 2px solid transparent;
+    border-left: 2px solid red;
+    padding-left: 10px;
+    margin: 5px;
+    cursor: pointer;
+    font-size: 2.2vh;
+    transition: 1s ease-in-out;
+
+}
+
+.dropdown-content-nav>input {
+    background-color: rgba(255, 255, 255, 0.199);
+    color: black;
+    border: 1px solid red;
+    padding: 10px;
+    width: 70vh;
+    border-radius: 5px;
+    margin: 10px;
+    font-size: 2.5vh;
+    cursor: pointer;
+    transition: 1s ease-in-out;
+}
+
+
+
+
+.dropdown-content-nav a:hover {
+    color: red;
+    background-color: transparent;
+    border: 2px solid red;
+    border-radius: 20px;
+}
+
+.dropdown-content-nav a:active {
+    transition: 200ms;
+    color: white;
+    background-color: red;
+    border: 2px solid red;
+    border-radius: 20px;
+}
+
+.dropdown-nav:hover .dropdown-content-nav {
+    display: block;
+    transition: 1s;
+}
+
+
+
+
+/* Drop down css # 2 in navbar */
+
+.dropbtn-nav-sign {
+    background-color: rgba(255, 255, 255, 0);
+
+    color: white;
+    border: 1px solid white;
+    padding: 10px;
+    width: 20vh;
+    border-radius: 5px;
+    margin: 10px;
+    font-size: 2.5vh;
+    cursor: pointer;
+    transition: 1s ease-in-out;
+}
+
+.dropbtn-nav-sign:hover {
+    background-color: white;
+    color: black;
+}
+
+.dropdown-nav-sign {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content-nav-sign {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    width: 20vh;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    z-index: 1;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.dropdown-content-nav-sign>p {
+    color: black;
+    font-size: 1.8vh;
+}
+
+#red-nav-sign {
+    background-color: red;
+    color: white;
+    border: 1px solid red;
+    padding: 10px 20px;
+    width: fit-content;
+    margin: 0px 20px;
+    border-radius: 5px;
+    font-size: 2.5vh;
+    transition: 400ms ease-in-out;
+    cursor: pointer;
+}
+
+#red-nav-sign:hover {
+    background-color: white;
+    color: red;
+
+}
+
+.dropdown-nav-sign:hover .dropdown-content-nav-sign {
+    display: block;
 }
