--- a/style.css
+++ b/style.css
@@ -24,11 +24,11 @@ body {
     color: #ffffff;
     height: 9vh;
     gap: 30px;
-     padding: 20px;
-     width: 100%;
-     margin: auto;
-     background: rgb(0, 0, 0);
-     padding: 15px 20px;
+    padding: 20px;
+    width: 100%;
+    margin: auto;
+    background: rgb(0, 0, 0);
+    padding: 15px 20px;
 }
 
 .flex-nav>img {
@@ -232,7 +232,7 @@ img {
     z-index: 1;
     padding: 10px;
     border-radius: 10px;
-    
+
 }
 
 .dropdown-content-nav-sign>p {
@@ -270,8 +270,8 @@ img {
 /* mini nav */
 
 
-#mini-nav{
-    display:flex;
+#mini-nav {
+    display: flex;
     width: 100%;
     background-color: white;
     margin: auto;
@@ -289,11 +289,7 @@ img {
     background-color: rgba(255, 255, 255, 0.199);
     color: black;
     border: none;
-    padding: 10px;
-    width: 70vh;
-    border-radius: 5px;
-    margin: 10px;
-    font-size: 2.5vh;
+    font-size: 2.2vh;
     cursor: pointer;
     transition: 1s ease-in-out;
 }
@@ -309,20 +305,56 @@ img {
     position: absolute;
     background-color: #f1f1f1;
     width: 190vh;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     z-index: 1;
-    padding: 10px;
-    border-radius: 10px;
+    padding: 20px;
+    border-radius: 5px;
     margin: auto;
+    cursor: pointer;
 }
 
+.dropdown-content-mininav-one>div {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: 20px;
+}
 
+.dropdown-content-mininav-one>div>div>h1 {
+    font-size: 2.1vh;
+}
+
+.dropdown-content-mininav-one>div>div>h2 {
+    font-size: 1.5vh;
+    color: blue;
+}
+
+.dropdown-content-mininav-one>div>div a{
+    width: 100%;
+    display: inline-block;
+    font-size: 2vh;
+    color: black;
+    text-decoration: none;
+    border: 2px solid transparent;
+    padding: 2px;
+    border-radius: 5px;
+    transition: 500ms;
+}
+
+.dropdown-content-mininav-one>div>div a:hover{
+    color: black;
+    border: 2px solid red;
+    color: red;
+
+}
+
+.dropdown-content-mininav-one>div>div a:active{
+    color: white;
+    border: 2px solid red;
+    background-color: red;
+}
 
 
 
 .dropdown-mininav-one:hover .dropdown-content-mininav-one {
     display: block;
 }
-
-
-
