--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    user-select: none;
 }
 
 
@@ -17,6 +18,7 @@ body {
 
 .header {
     padding: 0px;
+    z-index: 100;
 }
 
 .flex-nav {
@@ -469,3 +471,143 @@ img {
 
 
 
+
+
+
+
+
+#slider{
+    display: inline-block;
+    width: 100%;
+    height: 50vh;
+}
+
+#slider>iframe{
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
+
+
+
+/* Lets start Main content */
+
+.boxes{
+    text-align: center;
+    max-width: 200vh;
+    margin: auto;
+}
+
+.top-heading{
+    font-weight: normal;
+    font-size: 4vh;
+    border-bottom: 3px solid rgb(0, 0, 179);
+    width: fit-content;
+    margin: auto;
+    padding: 5px;
+    
+}
+
+
+.box1{
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    
+}
+
+img{
+    transition: 1s ease-in-out;
+}
+
+img:hover{
+transform: scale(0.9);
+box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+
+.box1-flex{
+    display: block;
+    flex-wrap: wrap;
+}
+
+.card{
+    padding: 10px;
+    border-radius: 20px;
+    transition: 1s ease-in-out;
+}
+
+.card:hover{
+    transform: scale(0.9);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.card img{
+width: 100%;
+transition: none;
+transform: scale(0.7);
+box-shadow: none;
+}
+
+.card>h1{
+    font-size: 2vh;
+    text-align: left;
+}
+ 
+.card>p{
+    font-size: 2vh;
+    text-align: left;
+    color: green;
+}
+ 
+
+.card>h2{
+    font-size: 2.2vh;
+    text-align: left;
+    color: red;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* start of footer */
+
+footer{
+    background-color: black;
+}
+
+
+#footer-1{
+    display: grid;
+    grid-template-columns:  auto auto auto auto auto;
+    color: white;
+    
+    width: 90%;
+    margin: auto;
+    padding: 40px;
+}
+ 
